<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:hint="@string/username_placeholder"
        android:textSize="30sp"
        android:textAlignment="center"
        android:inputType="text"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/password_placeholder"
        android:textSize="30sp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:autofillHints="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/lightBlue"
        android:enabled="false"
        android:visibility="gone"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_label"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:text="@string/create_account"
        android:focusable="true"
        android:textColor="@color/lightBlue"
        />
</LinearLayout>

