<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/username_create_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="@string/username_placeholder"
        android:textSize="25sp"
        android:textAlignment="center"
        android:inputType="text"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/password_create_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/password_placeholder"
        android:textSize="25sp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/password_confirm_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/password_confirm_placeholder"
        android:textSize="25sp"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/security_question_edit"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/create_security_question"
        android:textSize="25sp"
        android:textAlignment="center"
        android:inputType="text"
        android:autofillHints="false"/>

    <EditText
        android:id="@+id/security_question_answer"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/security_question_answer"
        android:textSize="25sp"
        android:textAlignment="center"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/finalize_account_create_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/create_account"
        android:textStyle="bold" />
</LinearLayout>